<resources>

    <string name="app_name">YeS Tournament</string>

    <!-- LOGIN -->
    <string name="txtMail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="txtNoAccount">Don\'t you have an account?\nStart here</string>


    <!-- REGISTER -->
    <string name="btnRegistrar">Join the Battle</string>


    <!-- MENU LATERAL -->

    <string name="txtTorneos">Tournaments</string>

    <string name="txtPerfil">Profile</string>
    <string name="txtEstadisticas">Stats</string>
    <string name="txtRanking">Ranking</string>
    <string name="txtMensajes">Messages</string>

    <string name="txtLogin">Login</string>


    <!-- PERFIL -->
    <string name="txtNickname">Nickname</string>
    <string name="txtCodSwitch">Código Switch</string>

    <string name="btnEditar">Edit</string>


    <!-- ESTADISTICAS -->
    <string name="txtOtros">Others</string>
    <string name="txtPosicion">Pos</string>


    <string name="title_activity_principal">ActivityPrincipal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_menu_lateral">ActivityMenuLateral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- #################################################### -->
    <string name="logo">Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
