<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".FragmentLogin"
    style="@style/estiloActivity">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageViewLogin"
        style="@style/estiloLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2" />

    <LinearLayout
        style="@style/estiloLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes_redondos"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/textViewMail"
            style="@style/estiloTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMail" />

        <EditText
            android:id="@+id/editTextMail"
            style="@style/estiloTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtMail"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewPassword"
            style="@style/estiloTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPassword" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/estiloTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewNoCuenta"
            style="@style/estiloTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtNoAccount" />
    </LinearLayout>
</LinearLayout>